# amiga-utils

./: .gitignore  CMakeLists.txt  Monam_CheatSheet.txt  README.md
VAsmGCC/: main.cpp
VAsmOnly/: CMakeLists.txt  strlen.s
pc-tools/: AmigaTools.sln  CMakeLists.txt
pc-tools/ImageConvert/: CMakeLists.txt  ImageConvert.vcxproj  ImageConvert.vcxproj.filters  ToolsLib.cpp
pc-tools/png/: CMakeLists.txt  libPNG.vcxproj  libPNG.vcxproj.filters
pc-tools/zlib/: CMakeLists.txt  zlib.vcxproj  zlib.vcxproj.filters
projects/: CMakeLists.txt
projects/CompressionASM/: CMakeLists.txt  main.s
projects/CompressionCPP/: CMakeLists.txt  main.cpp
projects/CopperAnimASM/: CMakeLists.txt  CopperAnimation.s  main.s
projects/CopperAnimCPP/: CMakeLists.txt  main.cpp
projects/CopperAnimGCC/: CMakeLists.txt
projects/Copperlist/: CMakeLists.txt
projects/ImageConvert/: AmigaFile.cpp  AmigaFile.h  C64Palette.plt  CMakeLists.txt  Color32Info.cpp  Color32Info.h  ImageConvert.cpp  ImageConvert.h  ImageFile.cpp  ImageFile.h  PngFile.cpp  PngFile.h  PnnQuantizer.cpp  QuantizerUtillities.cpp  QuantizerUtillities.h  gfxImage.cpp  gfxImage.h  main.cpp
projects/IntegerMathASM/: CMakeLists.txt  main.s
projects/IntegerMathCPP/: CMakeLists.txt  main.cpp
projects/MODPlayerASM/: CMakeLists.txt  main.s
projects/MODPlayerCPP/: CMakeLists.txt  DemoTrack.mod  main.cpp
projects/PrintFormattedCPP/: CMakeLists.txt  main.cpp
projects/SimpleCopperAnim/: CMakeLists.txt  main.s
projects/SimpleCopperlist/: CMakeLists.txt  main.s
projects/TestBlitterMemfill/: BlitterFill.asm  CMakeLists.txt  main.cpp
projects/TestMemfill/: CMakeLists.txt  main.cpp
projects/VAsmGCC/: main.cpp
projects/VAsmGCCLib/: CMakeLists.txt
projects/VAsmGCCLib/asmutils/: strlen.s
projects/VAsmGCCLib/include/: GCCLib.i
projects/VAsmGCCLib/src/: main.cpp
projects/VAsmOnly/: CMakeLists.txt
tools/: amiga-env  amiga-gcc
utilslib/: AmigaGCCUtilsLib.md  AmigaUtilsLib.md  CMakeLists.txt
utilslib/AmigaGCCUtils/time/: CMakeLists.txt
utilslib/AmigaUtils/: CMakeLists.txt
utilslib/AmigaUtils/AmigaC/: CMakeLists.txt  README.md
utilslib/AmigaUtils/AmigaC/src/: CMakeLists.txt
utilslib/AmigaUtils/AmigaC/src/math/: div32.s  mult32.s
utilslib/AmigaUtils/AmigaC/src/mem/: malloc.s  memcpy.s  memset.s
utilslib/AmigaUtils/AmigaLib/src/: CMakeLists.txt  MouseHelper.s  SystemTakeover.s  WaitRaster.s
utilslib/AmigaUtils/AmigaLib/src/algorithms/: bsearch.cpp
utilslib/AmigaUtils/AmigaLib/src/copper/: CreateCopperList.s
utilslib/AmigaUtils/AmigaLib/src/debug/: DebugWait.s  PrintCPU.s
utilslib/AmigaUtils/AmigaLib/src/dos/: DOSLibrary.s  FileLoad.s  FindParam.cpp  GetFileSize.s  PrintF.s  WriteString.s  options.cpp
utilslib/AmigaUtils/AmigaLib/src/math/: rnd_xorshift.s
utilslib/AmigaUtils/AmigaLib/src/mem/: memcpyl.s  memfill.s  memfillBlit.s  zcopyl.s  zcopyw.s
utilslib/AmigaUtils/AmigaLib/src/string/: format_string.s  long_to_string.s  string_to_long.s  string_to_word.s  strlen.s  to_string.s  word_to_string.s
utilslib/AmigaUtils/AmigaLib/src/string/prototype/: snprintf.cpp  vsnprintf.cpp
utilslib/AmigaUtils/AmigaLib/src/tools/: CMakeLists.txt
utilslib/AmigaUtils/AmigaLib/src/tools/libpng/: AmigaPng.c  CMakeLists.txt  pngpread.c  pngrutil.c
utilslib/AmigaUtils/AmigaLib/src/tools/zlib/: CMakeLists.txt  DataCompress.s  DataCompressedMaxLen.s  DataConf.s  crc32.c  gzguts.h  gzlib.c  gzread.c  gzwrite.c
utilslib/AmigaUtils/src/: CMakeLists.txt  DOSLibrary.s  DebugPowerLED.s  GFXLibrary.s  MouseHelper.s  SystemTakeover.s  WaitRaster.s
utilslib/AmigaUtils/src/copper/: CreateCopperListC.s
utilslib/AmigaUtils/src/dos/: DOSLibrary.s  WriteString.s
utilslib/AmigaUtils/src/math/: div32.s  mult32.s
utilslib/AmigaUtils/src/mem/: memcpyw.s  zcopyb.s  zcopyl.s  zcopyw.s
utilslib/AmigaUtils/src/sound/ptplayer/: ptplayer.h
utilslib/AmigaUtils/src/string/: format_string.s  long_to_string.s  strlen.s  to_decs16.s  to_decs32.s  to_decu16.s  to_decu32.s  word_to_string.s
utilslib/AmigaUtils/src/string/prototype/: vsnprintf._test.cpp
utilslib/CMake/: AmigaGCCProject.cmake  AmigaGCCUtilsConfig.cmake  AmigaUtilsConfig.cmake  AmigaVASMProject.cmake  CMakeAMIGA_VASMInformation.cmake  CMakeDetermineAMIGA_VASMCompiler.cmake  GetAmigaPathPrefix.cmake
utilslib/include/utils/: utils_def.h  utils_def.i
utilslib/include/utils/algorithms/: DynamicArray.h  SmartPtr.h  SortedArray.h  bsearch.h
utilslib/include/utils/debug/: debug.h
utilslib/include/utils/devices/: mouse.h
utilslib/include/utils/dos/: dos.h  options.h  stdio.h
utilslib/include/utils/gfx/: gfx.h  gfxbase.i  image.h  image.i
utilslib/include/utils/graphics/: gfxbase.i
utilslib/include/utils/hardware/: copper.h  copper.i  custom_registers.h  custom_registers.i
utilslib/include/utils/macros/: validate.i
utilslib/include/utils/math/: math.h
utilslib/include/utils/mem/: memory.h
utilslib/include/utils/sound/ptplayer/: ptplayer.h
utilslib/include/utils/string/: numbers.h  string.h
utilslib/include/utils/system/: endianness.h  libraries.h  libraries.i  mouse_helper.h  system.h
utilslib/include/utils/tools/png/: amiga_png.h  config.h  pngconf.h  pnglibconf.h  pngpriv.h  unistd.h
utilslib/include/utils/tools/zlib/: amiga_zlib.h  zconf.h  zlib.h  zlib.i
