cmake_minimum_required(VERSION 3.0)

project(AllProjects)

add_subdirectory(CopperAnimASM)
add_subdirectory(CopperAnimGCC)
add_subdirectory(IntegerMathASM)
add_subdirectory(SimpleCopperAnim)
add_subdirectory(SimpleCopperlist)
add_subdirectory(VAsmGCC)
add_subdirectory(VAsmGCCLib)
add_subdirectory(VAsmOnly)
