cmake_minimum_required(VERSION 3.0)

project(AllProjects)

add_subdirectory(CompressionASM)
add_subdirectory(CompressionCPP)
add_subdirectory(CopperAnimASM)
add_subdirectory(CopperAnimCPP)
add_subdirectory(ImageConvert)
add_subdirectory(IntegerMathASM)
add_subdirectory(IntegerMathCPP)
add_subdirectory(MODPlayerASM)
add_subdirectory(MODPlayerCPP)
add_subdirectory(PrintFormattedCPP)
add_subdirectory(SimpleCopperAnim)
add_subdirectory(SimpleCopperlist)
add_subdirectory(VAsmGCC)
add_subdirectory(VAsmGCCLib)
add_subdirectory(VAsmOnly)
